// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-12indpv-0 jzWDXz"
>
  <h1
    class="profiles__Title-sc-12indpv-1 ezZmdD"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-12indpv-2 iisofc"
  >
    <li
      class="profiles__Item-sc-12indpv-5 dglkFC"
    >
      <img
        class="profiles__Picture-sc-12indpv-4 jSBBWv"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-12indpv-3 hVMvzc"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-12indpv-0 jzWDXz"
>
  <h1
    class="profiles__Title-sc-12indpv-1 ezZmdD"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-12indpv-2 iisofc"
  >
    <li
      class="profiles__Item-sc-12indpv-5 dglkFC"
    >
      <img
        class="profiles__Picture-sc-12indpv-4 jSBBWv"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-12indpv-3 hVMvzc"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
